# Thunder_cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_note.md  README_relazione.md  coverage_report.txt  main  main.cpp  refactoring.odt  runner.sh  tester.sh
benchmark/: requrements.txt  test.py
data/: .gitignore  relazione.tex
include/: images.hpp  ndarray.hpp  series.hpp
include/ndarray/: ndarray_constructors.i.hpp  ndarray_converters.i.hpp  ndarray_functions.i.hpp  ndarray_initializers.i.hpp  ndarray_operator_overload.i.hpp  ndarray_operator_wrapper.i.hpp  ndarray_utils.i.hpp  ndarray_wrapper.i.hpp
src/: CMakeCache.txt  Makefile  bak_ndarray.cpp  cmake_install.cmake  helloworld.cpp  helloworld.h  images  images.cpp  images.hpp  main  main.cpp  ndarray.cpp  ndarray.hpp  series.cpp  series.hpp  tempCodeRunnerFile.cpp  test_coverage.cpp  test_coverage.h
src/baks/: bak_ndarray.cpp  bak_ndarray.hpp
src/ndarray/: ndarray_constructors.cpp  ndarray_converters.cpp  ndarray_functions.cpp  ndarray_initializers.cpp  ndarray_operator_overload.cpp  ndarray_operator_wrapper.cpp  ndarray_utils.cpp  ndarray_wrapper.cpp
test/: coverage.info  images_test  images_test.cpp  ndarray_test.cpp  series_test  series_test.cpp  test.cpp  testing.hpp
utils/: runner.sh  tester.sh
